deprecation overhaul